# Temp-motoooor

./: .gitignore  STM32_RPi5_Control_Guide.md  old.cpp  prompt.txt
rpi_controller/: CMakeLists.txt
rpi_controller/cmake/toolchains/: rpi5-aarch64.cmake
rpi_controller/examples/: command_example.json
rpi_controller/scripts/: build_linux.sh  build_rpi5.sh  build_windows.sh
rpi_controller/src/: main.cpp
stm32/HAREWER/GPIO/: gpio.c  gpio.h
stm32/HAREWER/MOTO/: moto.c  moto.h
stm32/HAREWER/PWM/: pwm.c  pwm.h
stm32/SYSTEM/delay/: delay.c
stm32/USER/: Tb6612demo.uvguix.zhxx3  Tb6612demo.uvoptx  Tb6612demo.uvprojx  main.c
stm32/USER/Listings/: Minibalance.map  startup_stm32f10x_md.lst
